# codewandler-markdown

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
corpus/: extensions.json  gfm-0.29.json  regression.json
crates/markdown/: Cargo.toml
crates/markdown-html/: Cargo.toml
crates/markdown-html/src/: lib.rs
crates/markdown-ratatui/: Cargo.toml
crates/markdown-ratatui/src/: lib.rs  theme.rs
crates/markdown-stream/: Cargo.toml
crates/markdown-stream/src/: block.rs  entity.rs  event.rs  inline.rs  lib.rs  linkref.rs  parser.rs
crates/markdown-stream/tests/: split_equivalence.rs
crates/markdown-terminal/: Cargo.toml
crates/markdown-terminal/src/: highlight.rs  lib.rs  live.rs  theme.rs
crates/markdown/examples/: render.rs
crates/markdown/src/: lib.rs
crates/markdown/tests/: compliance.rs  forward_refs.rs
crates/mdview/: Cargo.toml
crates/mdview/src/: main.rs
