[workspace]
resolver = "2"
members = [
    "crates/markdown-stream",
    "crates/markdown-html",
    "crates/markdown-terminal",
    "crates/markdown-ratatui",
    "crates/markdown",
    "crates/mdview",
]

[workspace.package]
edition = "2021"
version = "0.2.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codewandler/markdown"
homepage = "https://github.com/codewandler/markdown"
rust-version = "1.88"

[workspace.dependencies]
# internal — published under the codewandler- prefix ("markdown" is taken on crates.io);
# the dep key keeps the short name so `use markdown_stream::…` etc. stay unchanged
markdown-stream = { path = "crates/markdown-stream", package = "codewandler-markdown-stream", version = "0.2.1" }
markdown-html = { path = "crates/markdown-html", package = "codewandler-markdown-html", version = "0.2.1" }
markdown-terminal = { path = "crates/markdown-terminal", package = "codewandler-markdown-terminal", version = "0.2.1" }
markdown-ratatui = { path = "crates/markdown-ratatui", package = "codewandler-markdown-ratatui", version = "0.2.1" }
# external
unicode-width = "0.2"
is-terminal = "0.4"
thiserror = "2"
# dev / test only
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
