[package]
name = "codewandler-markdown-ratatui"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Render a markdown-stream event stream to ratatui Text (styled, width-aware, no ANSI round-trip)"

[lib]
name = "markdown_ratatui"

[dependencies]
markdown-stream.workspace = true
unicode-width.workspace = true
ratatui = { version = "0.30", default-features = false }
